--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp": "^4.0.2",
     "gulp-htmlmin": "^5.0.1",
     "gulp-postcss": "^9.0.0",
-    "gulp-terser": "^2.0.1"
+    "gulp-terser": "^2.0.1",
+    "postcss": "^8.2.8"
   }
 }
