--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "Rajouter une description",
   "devDependencies": {
     "browser-sync": "^2.26.14",
+    "browserify": "^17.0.0",
     "cssnano": "^4.1.10",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
@@ -18,6 +19,8 @@
     "gulp-imagemin": "^7.1.0",
     "gulp-postcss": "^9.0.0",
     "gulp-terser": "^2.0.1",
-    "postcss": "^8.2.8"
+    "postcss": "^8.2.8",
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0"
   }
 }
