--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "GPLv3",
   "description": "Rajouter une description",
   "devDependencies": {
+    "@babel/core": "^7.13.10",
     "@babel/preset-env": "^7.13.12",
     "babelify": "^10.0.0",
     "browser-sync": "^2.26.14",
