--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "gulp-terser": "^2.0.1",
     "postcss": "^8.2.8",
     "vinyl-buffer": "^1.0.1",
-    "vinyl-source-stream": "^2.0.0"
+    "vinyl-source-stream": "^2.0.0",
+    "watchify": "^4.0.0"
   },
   "dependencies": {
     "react": "^17.0.2",
